# Caelus

./: .flake8  .gitignore  CHANGELOG.md  README.md  caelus.bat  package.json  poetry.toml  pyproject.toml  tailwind.config.js
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/routers/: __init__.py  environment_data.py  geocode_data.py  weather_data.py
backend/app/services/: __init__.py  cache_manager.py  external_data_manager.py  file_manager.py  state_manager.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md
frontend/static/css/: style.css
frontend/static/js/caelus/: caelus.js  caelusAlert.js  caelusIcons.js  caelusIpsum.js  caelusUtility.js
frontend/templates/: dashboard.html
frontend/templates/components/: button.html  icon.html  icon_fancy.html
frontend/templates/elements/: footer.html  header.html
frontend/templates/elements/showcase/: icons.html
frontend/templates/pages/: dashboard.html  layout.html  showcase.html
scripts/: caelus_start.bat  pre_commit_checks.bat  reset_environment.bat  setup_environment.bat
