# Project metadata
[tool.poetry]
name = "caelus"
version = "0.1.0-alpha"
description = "Unshackle atmospheric insights leveraging the power of open data."
authors = ["Derjyn <648059+Derjyn@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Derjyn/Caelus"

# Python version and project dependencies
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
jinja2 = "^3.1.3"
httpx = "^0.26.0"
black = "^23.12.1"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = 'backend'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
