# =============================================================================
# Project metadata
# =============================================================================
[tool.poetry]
name = 'caelus'
version = '0.1.2-alpha'
description = 'Unshackle atmospheric insights leveraging the power of open data.'
authors = ['Derjyn <648059+Derjyn@users.noreply.github.com>']
license = 'GPL-3.0-or-later'
readme = 'docs/README.md'
repository = 'https://github.com/Derjyn/Caelus'
# =============================================================================


# =============================================================================
# Python version and project dependencies
# =============================================================================
[tool.poetry.dependencies]
python = '^3.11'
fastapi = '^0.109.0'
uvicorn = '^0.26.0'
jinja2 = '^3.1.3'
httpx = '^0.26.0'
# =============================================================================


# =============================================================================
# Development dependencies
# =============================================================================
[tool.poetry.group.dev.dependencies]
black = '^23.12.1'
flake8 = '^7.0.0'
isort = '^5.13.2'
pytest = '^7.4.4'
# =============================================================================


# =============================================================================
# Black configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = 'backend'
# =============================================================================


# =============================================================================
# isort configuration
# =============================================================================
[tool.isort]
src_paths = ['backend']
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
group_by_package = true
order_by_type = true
combine_star = true
line_length = 100
verbose = true
color_output = true
overwrite_in_place = true #! TEST
# =============================================================================


# =============================================================================
# Build system
# =============================================================================
[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
# =============================================================================
